[package]
name = "script_tests"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"

[lib]
name = "script_tests"
path = "lib.rs"

[dependencies]
euclid = "0.22"
keyboard-types = "0.6"
script = {path = "../../../components/script"}
servo_url = {path = "../../../components/url"}

secret_structs = {path = "../../../info-flow-library/ifc_library/secret_structs", package = "secret_structs"}
secret_macros = {path = "../../../info-flow-library/ifc_library/macros", package = "secret_macros"}
keyboard_wrapper = { path = "../../../components/keyboard_wrapper"}
